# Online-Voting-System

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  auto-build.sh
.github/workflows/: coding-style.sh  main.yml
client/: CMakeLists.txt  Makefile  command.c  command.h  main-client.c  text.h  user_login.c  user_login.h
common/inc/: error.h  proto.h  proto_lib.h  string_utils.h  unix_utils.h
common/src/: proto_lib.c  string_utils.c  unix_utils.c
mk/: common.mk
script/: test.sh
server/: CMakeLists.txt  Makefile  error.h  handler.c  handler.h  history.h  login.c  login.h  main-server.c  syslog.c  syslog.h
